--- a/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
@@ -1,170 +1,117 @@
 <section>
     <div class="d-flex fl justify-content-lg-end p-1 nav nav-underline">
         <div class="pe-3 nav-item">
-            <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel"
-                tabindex="-1">
+            <div class="modal fade d-flex justify-content-center"id="exampleModalToggle"aria-hidden="true"
+                aria-labelledby="exampleModalToggleLabel" tabindex="-1">
                 <div class="modal-dialog modal-dialog-centered">
-                    <!doctype html>
-                    <html lang="en">
-
-                    <head>
-                        <meta charset="utf-8">
-                        <meta name="viewport" content="width=device-width, initial-scale=1">
-                        <title>Bootstrap demo</title>
-                    </head>
-
                     <body>
-
-
-
                         <article>
                             <div class="caja">
                                 <div class="caja2">
                                     <h1 class="registro">Registrate</h1>
-
-                                    <div class="cuboflotante d-flex justify-content-end">
+                                    <div
+                                        class="cuboflotante d-flex justify-content-end">
                                         <div class="cube-loader">
                                             <div class="cube-top"></div>
                                             <div class="cube-wrapper">
-                                                <span style="--i: 0" class="cube-span"></span>
-                                                <span style="--i: 1" class="cube-span"></span>
-                                                <span style="--i: 2" class="cube-span"></span>
-                                                <span style="--i: 3" class="cube-span"></span>
+                                                <span style="--i: 0"class="cube-span"></span>
+                                                <span style="--i: 1"class="cube-span"></span>
+                                                <span style="--i: 2"class="cube-span"></span>
+                                                <span style="--i: 3"class="cube-span"></span>
                                             </div>
                                         </div>
                                     </div>
                                     <a> Es rapido y fácil</a>
-
                                     <div class="linea"></div>
-
                                     <div class="row g-3">
                                         <div class="col-md">
                                             <div class="nombres">
-                                                <input type="text" class="form-control" placeholder="Nombre" />
+                                                <input type="text"class="form-control"placeholder="Nombre"/>
                                             </div>
                                         </div>
-
                                         <div class="col-md">
                                             <div class="form nombres">
-                                                <input type="text" class="form-control" placeholder="Apellidos" />
+                                                <input type="text"class="form-control"placeholder="Apellidos"/>
                                             </div>
                                         </div>
-
                                         <div class="row g3">
                                             <div class="col-md">
                                                 <div class="form correo">
-                                                    <input type="email" class="form-control"
-                                                        placeholder="Correo electronico" />
+                                                    <input type="email"class="form-control"placeholder="Correo electronico"/>
                                                 </div>
                                             </div>
-
                                             <div class="contraseña">
-                                                <input type="password" class="form-control" placeholder="Contraseña" />
+                                                <input type="password"class="form-control"placeholder="Contraseña"/>
                                             </div>
                                         </div>
                                     </div>
-
                                     <p class="mt-3 mb-2">fecha de nacimiento</p>
-
                                     <div>
-                                        <input type="date"
-                                            class="form-control d-flex justify-content-center mb-4 w-50 place1" />
+                                        <input type="date"class="form-control d-flex justify-content-center mb-4 w-50 place1"/>
                                     </div>
-
                                     <div class="linea2"></div>
-
                                     <p class="tipo pb-0 mb-0">Tipo de usuario</p>
-
                                     <div class="boton-user">
                                         <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="flexRadioDefault" />
+                                            <input class="form-check-input"type="radio"name="flexRadioDefault"/>
                                             <label class="form-check-label">
                                                 <p class="Cash">Adm account</p>
                                             </label>
                                         </div>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="flexRadioDefault" />
-                                            <label class="form-check-label" for="flexRadioDefault1">
+                                            <input class="form-check-input"type="radio"name="flexRadioDefault"/>
+                                            <label class="form-check-label"for="flexRadioDefault1">
                                                 <p class="Cash">Cashier account</p>
                                             </label>
                                         </div>
                                     </div>
-
                                     <div class="cajaboton d-flex justify-content-center">
-                                        <a class="botonf mt-5 btn btn-dark" href=""> Registrate </a>
+                                        <a class="botonf mt-5 btn btn-dark" href="">Registrate</a>
                                     </div>
                                 </div>
                             </div>
                         </article>
-
-
                     </body>
-
-                    </html>
-
-
                 </div>
             </div>
-            <button class="btn btn-primary" data-bs-target="#exampleModalToggle"
-                data-bs-toggle="modal">Registrate</button>
+            <button class="btn btn-primary" data-bs-target="#exampleModalToggle"data-bs-toggle="modal">Registrate</button>
         </div>
         <div class="pe-3 nav-item">
-            <div class="modal fade" id="mod2" aria-hidden="true" aria-labelledby="mod21" tabindex="-1">
+            <div class="modal fade" id="mod2"aria-hidden="true" aria-labelledby="mod21"tabindex="-1">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h1 class="modal-title fs-5" id="mod21">Modal 1</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            <button type="button"class="btn-close"data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             <main>
-                                <div>
-                                    <img src="..." class="rounded float-start" alt="">
-                                </div>
-
-
-
                                 <section class="caja1">
-
-                                    <img class="imgF" src="/assets/LOGO STADISTIC.png" alt="">
+                                    <img class="imgF"src="/assets/LOGO STADISTIC.png"alt=""/>
                                     <div class="subtitulo">
                                         statistics and business
                                     </div>
                                 </section>
                                 <section class="caja2">
-
-                                    <form class=" mb-10 form">
-                                        <input type="text" placeholder="email@domain.com">
-
-                                        <input type="password" placeholder="Contraseña">
-
+                                    <form class="mb-10 form">
+                                        <input type="text"placeholder="email@domain.com"/>
+                                        <input type="password"placeholder="Contraseña"/>
                                         <div class="mb-3">
-                                            <a href="#" class=" url1">¿Olvidaste la contraseña?</a>
+                                            <a href="#" class="url1">¿Olvidaste la contraseña?</a>
                                         </div>
-
                                         <a class="btn1" href="">Iniciar sesión</a>
-
-
-
-
-
-
                                     </form>
-                                    <div class="texto3"> Terminos de uso y privacidad de cookies
+                                    <div class="texto3">
 
+                                        Terminos de uso y privacidad de cookies
                                     </div>
                                 </section>
                             </main>
                         </div>
-                        <div class="modal-footer">
-                            <button class="btn btn-primary" data-bs-target="#exampleModalToggle3"
-                                data-bs-toggle="modal">Open second modal</button>
-                        </div>
                     </div>
                 </div>
             </div>
-
-            <button class="btn btn-primary" data-bs-target="#mod2" data-bs-toggle="modal"> Inicio</button>
+            <button class="btn btn-primary"data-bs-target="#mod2"data-bs-toggle="modal">Inicio</button>
         </div>
         <div class="pe-5 nav-item">
             <a class="text-decoration-none text-dark texto1 nav-link" href="">Ayuda ?</a>
@@ -173,8 +120,9 @@
 </section>
 <div class="row">
     <div class="col-4 offset-4 columna-menu">
-        <section class="d-flex justify-content-center align-items-center flex-column h-100">
-            <img class="img1" src="img/LOGO STADISTIC.png" alt="">
+        <section
+            class="d-flex justify-content-center align-items-center flex-column h-100">
+            <img class="img1" src="img/LOGO STADISTIC.png" alt="" />
             <section class="slider-opciones mt-5 slider1">
                 <div class="d-flex justify-content-center align-items-center iconos1">
                     <i class="fa-solid fa-pizza-slice item1"></i>
@@ -206,16 +154,24 @@
         </button>
     </div>
 </section>
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+<script
+    src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+    crossorigin="anonymous"
+></script>
+<script
+    src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
     integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+></script>
+<script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"
+></script>
 <script>
-    $('.slider-opciones').slick({
+    $(".slider-opciones").slick({
         slidesToShow: 1,
         slidesToScroll: 1,
         autoplay: true,
