--- a/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
@@ -99,19 +99,31 @@
 </section>
 <div class="row">
     <div class="col-4 offset-4 columna-menu">
-        <section
-            class="d-flex justify-content-center align-items-center flex-column h-100">
-            <img class="img1" src="img/LOGO STADISTIC.png" alt="" />
+        <section class="d-flex justify-content-center align-items-center flex-column h-100">
+            <img class="img1" src="img/LOGO STADISTIC.png" alt="">
             <section class="slider-opciones mt-5 slider1">
-                <div
-                    class="d-flex justify-content-center align-items-center iconos1">
-                    <i class="fa-solid fa-pizza-slice item1"></i>
-                </div>
-                <div class="d-flex justify-content-center align-items-center iconos1">
-                    <i class="fa-solid fa-shirt item1"></i>
-                </div>
-                <div class="d-flex justify-content-center align-items-center iconos1">
-                    <i class="fa-solid fa-champagne-glasses item1"></i>
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <section class="d-flex justify-content-center">
+                            <div class="carousel-item active">
+                                <img src="img/icono_pizza.png" class="d-block w-25" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/camisa.png" class="d-block w-25" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/copas.png" class="d-block w-25" alt="...">
+                            </div>
+                        </section>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </section>
         </section>
