--- a/frontend_facturacion/proyecto_jas/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/nav-bar/nav-bar.component.html
@@ -1,35 +1,20 @@
 <nav class="navbar" style="background-color: #2e017c">
     <div class="d-flex">
         <a class="navbar-brand ms-3 text-white" href="#">
-            <img
-                src="img/LOGO STADISTIC.png"
-                alt="Logo"
-                width="40"
-                class="align-items-center me-1"
-            />
-            Statistic Business
-        </a>
+            <img src="img/LOGO STADISTIC.png"alt="Logo"
+                width="40"class="align-items-center me-1"/>
+            Statistic Business</a>
         <ul class="nav nav-underline align-items-center ms-5">
             <li class="nav-item dropdown">
-                <a
-                    class="nav-link dropdown-toggle text-white"
-                    href="#"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                    ><i class="fa-solid fa-bars me-1"></i>
-                    Dashboard
-                </a>
+                <a class="nav-link dropdown-toggle text-white"href="#"role="button"
+                    data-bs-toggle="dropdown"aria-expanded="false"><i class="fa-solid fa-bars me-1"></i>
+                    Dashboard</a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a class="dropdown-item" href="agregar_productos.html"
-                            >Añadir productos</a
-                        >
+                        <a class="dropdown-item"  routerLink="/crear-producto">Añadir productos</a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="index3.html"
-                            >Inventario</a
-                        >
+                        <a class="dropdown-item" routerLink="/">Inventario</a>
                     </li>
                     <li><a class="dropdown-item" href="#">Clientes</a></li>
                 </ul>
@@ -39,35 +24,30 @@
                     class="nav-link text-white fw-lighter"
                     aria-current="page"
                     href="pagina_vender.html"
-                    ><i class="fa-solid fa-cash-register me-1"></i>Vender</a
-                >
+                    ><i class="fa-solid fa-cash-register me-1"></i>Vender</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-white fw-lighter" href="index2.html"
-                    ><i class="fa-solid fa-clipboard-list me-1"></i>pedidos</a
-                >
+                    ><i class="fa-solid fa-clipboard-list me-1"></i>pedidos</a>
             </li>
             <li class="nav-item">
                 <a
                     class="nav-link text-white fw-lighter me-3"
                     href="pagina_estadisticas.html"
-                    ><i class="fa-solid fa-chart-line me-1"></i>estadisticas</a
-                >
+                    ><i class="fa-solid fa-chart-line me-1"></i>estadisticas</a>
             </li>
             <div class="col-auto ms-2 me-5">
                 <div class="input-group">
                     <div
                         class="input-group-text btn"
-                        style="background-color: #dcdcdc"
-                    >
+                        style="background-color: #dcdcdc">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
                     <input
                         type="search"
                         class="form-control"
                         id="autoSizingInputGroup"
-                        placeholder="buscar"
-                    />
+                        placeholder="buscar"/>
                 </div>
             </div>
         </ul>
