--- a/frontend_facturacion/proyecto_jas/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/nav-bar/nav-bar.component.html
@@ -14,7 +14,7 @@
                         <a class="dropdown-item"  routerLink="/crear-producto">Añadir productos</a>
                     </li>
                     <li>
-                        <a class="dropdown-item" routerLink="/">Inventario</a>
+                        <a class="dropdown-item" routerLink="/inventario">Inventario</a>
                     </li>
                     <li><a class="dropdown-item" href="#">Clientes</a></li>
                 </ul>
