--- a/frontend_facturacion/proyecto_jas/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/nav-bar/nav-bar.component.html
@@ -23,7 +23,7 @@
                 <a
                     class="nav-link text-white fw-lighter"
                     aria-current="page"
-                    href="pagina_vender.html"
+                    routerLink="/ventas"
                     ><i class="fa-solid fa-cash-register me-1"></i>Vender</a>
             </li>
             <li class="nav-item">
