--- a/frontend_facturacion/proyecto_jas/src/app/components/admin/inventario/inventario.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/admin/inventario/inventario.component.html
@@ -1,1 +1,30 @@
-<p>inventario works!</p>
+<section>
+    <div class="cajita">
+        <span class="texto3">Inventarios</span>
+        <div class="linea"></div>
+    </div>
+    <section class="tabla1">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Item</th>
+                    <th scope="col">Id del item</th>
+                    <th scope="col">Unidade existentes</th>
+                    <th scope="col">Agregar unidades</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>
+                        <img class="img1" src="" alt="" />
+                    </td>
+                    <td>Producto</td>
+                    <td>Cantidad</td>
+                    <td><input type="number" /></td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+</section>
