--- a/frontend_facturacion/proyecto_jas/src/app/components/admin/inventario/inventario.component.css
+++ b/frontend_facturacion/proyecto_jas/src/app/components/admin/inventario/inventario.component.css
@@ -21,11 +21,9 @@
     text-align: center;
 }
 
-.img1{
-    width: 50px;
-}
 
-input{
+
+.cantidad{
     width: 80px;
     border-radius: 5px;
     border-color: #a720e6;
