--- a/frontend_facturacion/proyecto_jas/src/app/components/admin/agregar-producto/agregar-producto.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/admin/agregar-producto/agregar-producto.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-2 text-center">
+<div class="row mt-4 ">
     <div class="col-sm-6 col-md-8">
         <div class="row row-cols-md-3 g-4 ms-4">
             <div class="col">
@@ -10,7 +10,7 @@
                         <div class="modal fade"id="exampleModalToggle"
                             aria-hidden="true"aria-labelledby="exampleModalToggleLabel"tabindex="-1">
                             <div class="modal-dialog modal-dialog-centered">
-                                <div class="modal-content">
+                                <div class="modal-content ms">
                                     <div class="modal-header">
                                         <h1 class="modal-title fs-4"
                                             id="exampleModalToggleLabel">AGREGA TU PRODUCTO</h1>
@@ -31,6 +31,9 @@
                                             <input type="text" class="form-control"
                                             aria-label="Dollar amount (with dot and two decimal places)" placeholder="PRECIO">
                                         </div>
+                                        <div class="input-group mb-3">
+                                            <input type="text" class="visually-hidden" />
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -38,10 +41,46 @@
                         <button
                             class="btn btn-primary"
                             data-bs-target="#exampleModalToggle"
-                            data-bs-toggle="modal">AGREGAR</button>
+                            data-bs-toggle="modal">Editar</button>
                     </div>
                 </div>
             </div>
         </div>
+                        <div class="modal fade"id="exampleModalToggle"
+                            aria-hidden="true"aria-labelledby="exampleModalToggleLabel"tabindex="-1">
+                            <div class="modal-dialog modal-dialog-centered">
+                                <div class="modal-content ms">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-4"
+                                            id="exampleModalToggleLabel">AGREGA TU PRODUCTO</h1>
+                                        <button type="button"class="btn-close"
+                                            data-bs-dismiss="modal"aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="input-group">
+                                            <input type="file" class="form-control" id="inputGroupFile04"
+                                            aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+                                        </div>
+                                        <div class="py-3">
+                                            <input type="text" class="form-control" placeholder="Nombre del producto"
+                                            aria-label="Nombre del producto">
+                                        </div>
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text">$</span>
+                                            <input type="text" class="form-control"
+                                            aria-label="Dollar amount (with dot and two decimal places)" placeholder="PRECIO">
+                                        </div>
+                                        <div class="input-group mb-3">
+                                            <input type="text" class="visually" />
+                                        </div>
+                                        <button type="button" class="btn btn-primary">Guardar</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button
+                            class="btn btn-primary ms-5 mt-2"
+                            data-bs-target="#exampleModalToggle"
+                            data-bs-toggle="modal">AGREGAR</button>
     </div>
 </div>
