--- a/frontend_facturacion/proyecto_jas/src/app/components/admin/inicio/inicio.component.css
+++ b/frontend_facturacion/proyecto_jas/src/app/components/admin/inicio/inicio.component.css
@@ -158,7 +158,7 @@ background: rgb(170,11,245);
     background: linear-gradient(90deg, rgba(170,11,245,0.2637429971988795) 43%, rgba(16,77,236,0.14049369747899154)61%);
 
 }
-.contraseña{
+.clave{
 margin-top: 10px;
 width:auto;
 }
