--- a/frontend_facturacion/proyecto_jas/src/app/components/admin/inicio/inicio.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/admin/inicio/inicio.component.html
@@ -19,8 +19,8 @@
                         <input type="email" class="form-control" id="email" placeholder="Correo electrónico" required>
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="password" placeholder="Contraseña" required>
+                        <label for="password" class="form-label">clave</label>
+                        <input type="password" class="form-control" id="password" placeholder="clave" required>
                     </div>
                     <div class="mb-3">
                         <label for="fechaNacimiento" class="form-label">Fecha de nacimiento</label>
