--- a/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
@@ -3,53 +3,52 @@
     <!-- Button trigger modal -->
 
 
-<div class=" titulo d-flex justify-content-end align-items-center">
-    <button type="button" class="  titulo fw-bolder fs-5 btn btn- d-flex " data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-        Registrarse
-      </button>
-      <div class="pe-5 nav-item">
-        <a class=" titulo text-decoration-none fw-bolder fs-5 texto1 nav-link" href="">Ayuda ?</a>
+    <div class=" titulo d-flex justify-content-end align-items-center">
+        <button type="button" class="  titulo fw-bolder fs-5 btn btn- d-flex " data-bs-toggle="modal"
+            data-bs-target="#staticBackdrop">
+            Registrarse
+        </button>
+        <div class="pe-5 nav-item">
+            <a class=" titulo text-decoration-none fw-bolder fs-5 texto1 nav-link" href="">Ayuda ?</a>
+        </div>
     </div>
-</div>
 
-  <!-- Modal -->
-  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="staticBackdropLabel">Formulario de registro </h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Formulario de registro </h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form [formGroup]="formPrincipal" (ngSubmit)="RegistroUsuario()" class=" caja-modal">
+                        <span>Nombre/s</span>
+                        <input type="text" id="nombre" name="nombre" required formControlName="nombres">
+
+                        <span>Apellido/s</span>
+                        <input type="text" id="apellido" name="apellido" required formControlName="apellidos">
+
+                        <span>Contraseña</span>
+                        <input type="password" id="contrasena" name="clave" required formControlName="clave">
+
+                        <span>Confirmar clave</span>
+                        <input type="password" id="contrasena" name="clave" required formControlName="rectificar_clave">
+
+                        <span>Fecha de Nacimiento:</span>
+                        <input type="date" id="fecha_nacimiento" name="fechaNacimiento" required
+                            formControlName="fechaNacimiento">
+
+                        <span>Correo Electrónico:</span>
+                        <input type="email" id="email" name="correoElectronico" required
+                            formControlName="correoElectronico">
+                        <button type="submit" class="btn btn-primary">Registrarse</button>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="modal-body">
-            <form [formGroup]="formPrincipal"(ngSubmit)="RegistroUsuario()" class=" caja-modal">
-                <span>Nombre/s</span>
-                <input type="text" id="nombre" name="nombre" required  formControlName="nombres">
-
-                <span>Apellido/s</span>
-                <input type="text" id="apellido" name="apellido" required formControlName="apellidos">
-
-                <span>Contraseña</span>
-                <input type="password" id="contrasena" name="contrasena" required>
-
-                <span>Confirmar Contraseña</span>
-                <input type="password" id="contrasena" name="contrasena" required>
-
-                <span>Fecha de Nacimiento:</span>
-                <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required>
-
-                <span >Correo Electrónico:</span>
-                <input type="email" id="email" name="email" required>
-
-
-            </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-primary">Registrarse</button>
-        </div>
-      </div>
     </div>
-  </div>
 
 
 
