--- a/frontend_facturacion/proyecto_jas/src/app/components/admin/agregar-producto/agregar-producto.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/admin/agregar-producto/agregar-producto.component.html
@@ -71,9 +71,11 @@
                                             aria-label="Dollar amount (with dot and two decimal places)" placeholder="PRECIO">
                                         </div>
                                         <div class="input-group mb-3">
-                                            <input type="text" class="visually" />
+                                            <input type="text" class="" />
                                         </div>
-                                        <button type="button" class="btn btn-primary">Guardar</button>
+                                        <div>
+                                            <button type="button" class="btn btn-primary">Guardar</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
