update to make merge

--- a/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
@@ -62,13 +62,13 @@
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="img/icono_pizza.png" class="d-block w-25" alt="...">
+                            <img src="img/icono_pizza.png" class="d-block w-25 d-flex justify-content-center" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/camisa.png" class="d-block w-25" alt="...">
+                            <img src="img/camisa.png" class="d-block w-25 d-flex justify-content-center" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/copas.png" class="d-block w-25" alt="...">
+                            <img src="img/copas.png" class="d-block w-25 d-flex justify-content-center" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
