--- a/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
@@ -105,15 +105,15 @@
                 <section class="slider-opciones mt-5 slider1">
                     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <section class="d-flex justify-content-center">
+                            <section>
                                 <div class="carousel-item active">
-                                    <img src="img/icono_pizza.png" class="d-block w-25" alt="...">
+                                    <img src="img/icono_pizza.png" class="d-block w-25 d-flex mx-auto justify-content-center" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/camisa.png" class="d-block w-25" alt="...">
+                                    <img src="img/camisa.png" class="d-block w-25 mx-auto d-flex justify-content-around" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/copas.png" class="d-block w-25" alt="...">
+                                    <img src="img/copas.png" class="d-block w-25 mx-auto d-flex justify-content-center" alt="...">
                                 </div>
                             </section>
                         </div>
