--- a/frontend_facturacion/proyecto_jas/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/nav-bar/nav-bar.component.html
@@ -20,11 +20,7 @@
                 </ul>
             </li>
             <li class="nav-item">
-                <a
-                    class="nav-link text-white fw-lighter"
-                    aria-current="page"
-                    routerLink="/ventas"
-                    ><i class="fa-solid fa-cash-register me-1"></i>Vender</a>
+                <a class="nav-link text-white fw-lighter"aria-current="page"routerLink="/ventas"><i class="fa-solid fa-cash-register me-1"></i>Vender</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-white fw-lighter" href="index2.html"
