prueba 3 merge entre camilo master

--- a/frontend_facturacion/proyecto_jas/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/nav-bar/nav-bar.component.html
@@ -34,7 +34,7 @@
                 <a
                     class="nav-link text-white fw-lighter me-3"
                     href=""
-                    ><i class="fa-solid fa-chart-line me-1" routerLink="/estadisticas"></i>estadisticas</a>
+                    ><i class=" fa-solid fa-chart-line me-1" class="dropdown-item" routerLink="/estadisticas"></i>estadisticas</a>
             </li>
             <div class="col-auto ms-2 me-5">
                 <div class="input-group">
